<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#545454"

    android:weightSum="100"
    android:minWidth="25px"
    android:minHeight="25px">

    <TextView
        android:id="@+id/txtHello"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="center"
        android:text="HATE APP!"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sendMessage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="15"
        android:background="@drawable/buttonstyle"
        android:text="Send Message!"
        android:textSize="20sp" />

    <Button
        android:id="@+id/allMessages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="15"
        android:background="@drawable/buttonstyle"
        android:text="Messages"
        android:textSize="20sp" />
</LinearLayout>